# CS5231_Project

./: CMakeLists.txt  README.md  README.txt  detector.c  detector.c.backup  detector.h  ghidra_exportcfg.py
ghidra_scripts/: ExportCFG.py
src/: callnode.cpp  callnode.h  cfgnode.cpp  cfgnode.h  cfgsymboledge.cpp  cfgsymboledge.h  detector.cpp  detector.h  heapnode.cpp  heapnode.h  symbolinfo.cpp  symbolinfo.h  threadcontext.cpp  threadcontext.h
test_programs/: Makefile  function_ptr.c  heap.c  jit_test.c  longjmp.c  strcpy_overflow.c
